--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,19 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FYP_TomMadden"
         tools:targetApi="31">
+        <activity
+            android:name=".TotalActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DailySessions"
+            android:exported="false" />
+        <activity
+            android:name=".PetActivityPage"
+            android:exported="false" />
         <activity
             android:name=".ConnectionPage"
             android:exported="false"
@@ -27,7 +37,6 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
